United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6968367 can_post_on_exceptions is still using VM_DeoptimizeFrame in some places
6968367 : can_post_on_exceptions is still using VM_DeoptimizeFrame in some places

Details
Type:
Bug
Submit Date:
2010-07-12
Status:
Closed
Updated Date:
2011-04-23
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
solaris_9
Sub-Component:
compiler
CPU:
sparc
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs19
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
The fix for 6902182 to speed up running with an agent missed a few places where C1 was using the VM_DeoptimizeFrame and those should be updated.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/ce6848d0666d
                                     
2010-12-04
EVALUATION

6968367: can_post_on_exceptions is still using VM_DeoptimizeFrame in some places
Reviewed-by: kvn, twisti

The fix for 6902182 changed some call sites where deopt is needed to
call directly into deoptimize_frame instead of using
VM_DeoptimizeFrame but it missed quite a few places, particularly in
the client compiler.  Instead of directly modifying each site to use
the appropriate version I modified Deoptimization::deoptimize_frame to
select the appropriate version, made VM_DeoptimizeFrame private, and
updated all call sites to use the main entry point.  Tested with all
the nsk JVMTI tests.
                                     
2010-10-21



Hardware and Software, Engineered to Work Together