6968367: can_post_on_exceptions is still using VM_DeoptimizeFrame in some places

Reviewed-by: kvn, twisti